plugins {
  id 'groovy'
  id 'org.springframework.boot' version '2.0.3.RELEASE'
  id 'io.spring.dependency-management' version '1.0.6.RELEASE'
}

sourceCompatibility = '11'
targetCompatibility = '11'

repositories {
  jcenter()
}

dependencies {
  implementation 'org.yaml:snakeyaml'
  implementation 'org.springframework.boot:spring-boot-starter-webflux'
  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
  implementation 'org.codehaus.groovy:groovy-all'

  compileOnly 'org.projectlombok:lombok:1.18.10'
  annotationProcessor 'org.projectlombok:lombok:1.18.10'

  testImplementation 'org.spockframework:spock-core:1.1-groovy-2.4'
  testImplementation 'org.spockframework:spock-spring:1.1-groovy-2.4'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testRuntimeOnly 'cglib:cglib-nodep:3.2.7'
  testRuntimeOnly 'org.objenesis:objenesis:2.6'
  testRuntimeOnly 'org.apache.httpcomponents:httpclient'
}
